--- a/cotizador_acerta/templates/polizas/email_solicitud.html
+++ b/cotizador_acerta/templates/polizas/email_solicitud.html
@@ -320,7 +320,7 @@
 								</td>
 							</tr>
 						</tbody></table>
-						{% if solicitud.cotizacion.conductor.datos.first.ilicito or solicitud.cotizacion.conductor.datos.first.politico_expuesto%}
+						{% if solicitud.cotizacion.conductor.datos.first.ilicito == 'Si' or solicitud.cotizacion.conductor.datos.first.politico_expuesto == 'Si' or solicitud.cotizacion.conductor.datos.first.declaracion_prima == 'Si' %}
 							<table width="600" border="0" cellpadding="0" cellspacing="0" align="center" class="mobile2" bgcolor="#ffffff" object="drag-module-small" style="background-color: rgb(255, 255, 255);">
 								<tbody><tr>
 									<td width="100%" valign="middle">
@@ -329,11 +329,17 @@
 											<tbody><tr>
 												<td valign="middle" width="100%" style="text-align: left; font-family: Helvetica, Arial, sans-serif; font-size: 14px; color: rgb(63, 67, 69); line-height: 24px;" mc:edit="41">
 													<!--[if !mso]><!--><!--<![endif]-->
-							{% if solicitud.cotizacion.conductor.datos.first.ilicito and solicitud.cotizacion.conductor.datos.first.politico_expuesto%}
+							{% if solicitud.cotizacion.conductor.datos.first.ilicito == 'Si' and solicitud.cotizacion.conductor.datos.first.politico_expuesto == 'Si' and solicitud.cotizacion.conductor.datos.first.declaracion_prima == 'Si' %}
+								<span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]--><strong>Atención: La presente solicitud fue realizada por una persona que ha sido objeto de investigación, políticamente expuesta y que declara ganar una prima mayor a B. 10,000.00. Por esta razón no se podrá emitir la póliza hasta haberse completado una investigación previa del caso.<!--[if !mso]><!--></strong></span>
+							{% elif solicitud.cotizacion.conductor.datos.first.ilicito == 'Si' and solicitud.cotizacion.conductor.datos.first.politico_expuesto == 'Si' %}
 								<span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]--><strong>Atención: La presente solicitud fue realizada por una persona que ha sido objeto de investigación y políticamente expuesta. Por esta razón no se podrá emitir la póliza hasta haberse completado una investigación previa del caso.<!--[if !mso]><!--></strong></span>
-							{% elif solicitud.cotizacion.conductor.datos.first.ilicito %}
+							{% elif solicitud.cotizacion.conductor.datos.first.ilicito == 'Si' and solicitud.cotizacion.conductor.datos.first.declaracion_prima == 'Si' %}
+								<span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]--><strong>Atención: La presente solicitud fue realizada por una persona que ha sido objeto de investigación y que declara ganar una prima mayor a B. 10,000.00. Por esta razón no se podrá emitir la póliza hasta haberse completado una investigación previa del caso.<!--[if !mso]><!--></strong></span>
+							{% elif solicitud.cotizacion.conductor.datos.first.politico_expuesto == 'Si' and solicitud.cotizacion.conductor.datos.first.declaracion_prima == 'Si' %}
+								<span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]--><strong>Atención: La presente solicitud fue realizada por una persona políticamente expuesta y que declara ganar una prima mayor a B. 10,000.00. Por esta razón no se podrá emitir la póliza hasta haberse completado una investigación previa del caso.<!--[if !mso]><!--></strong></span>
+							{% elif solicitud.cotizacion.conductor.datos.first.ilicito == 'Si' %}
 								<span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]--><strong>Atención: La presente solicitud fue realizada por una persona que ha sido objeto de investigación. Por esta razón no se podrá emitir la póliza hasta haberse completado una investigación previa del caso.<!--[if !mso]><!--></strong></span>
-							{% elif solicitud.cotizacion.conductor.datos.first.politico_expuesto %}
+							{% elif solicitud.cotizacion.conductor.datos.first.politico_expuesto == 'Si' %}
 								<span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]--><strong>Atención: La presente solicitud fue realizada por una persona políticamente expuesta. Por esta razón no se podrá emitir la póliza hasta haberse completado una investigación previa del caso.</strong><!--[if !mso]><!-->
 
 								<br><br>
@@ -342,6 +348,8 @@
 												Acerta Seguros
 
 												</span>
+							{% elif solicitud.cotizacion.conductor.datos.first.declaracion_prima == 'Si' %}
+								<span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]--><strong>Atención: La presente solicitud fue realizada por una persona que declara ganar una prima mayor de B. 10,000.00. Por esta razón no se podrá emitir la póliza hasta haberse completado una investigación previa del caso.<!--[if !mso]><!--></strong></span>
 							{% endif %}
 												</td>
 											</tr>
