El telefono de empresa viene por default en form solicitud

--- a/cotizador_acerta/templates/polizas/solicitud.html
+++ b/cotizador_acerta/templates/polizas/solicitud.html
@@ -806,6 +806,8 @@
                 element.classList.add("hidden");
             }
         });
+
+        $('#id_telefono_empresa').val('{{cotizacion.conductor.telefono2}}');
     });
 
     /////////////////////////// ASEGURADO ///////////////////
