Es obligatorio seleccionar acreedor o leasing para escoger de la lista

--- a/cotizador_acerta/templates/polizas/solicitud.html
+++ b/cotizador_acerta/templates/polizas/solicitud.html
@@ -808,6 +808,7 @@
         });
 
         $('#id_telefono_empresa').val('{{cotizacion.conductor.telefono2}}');
+        $('#id_acreedor_leasing').prop('disabled',true);
     });
 
     /////////////////////////// ASEGURADO ///////////////////
@@ -921,6 +922,9 @@
             element.classList.add("hidden");
 
         }
+
+        $('#id_acreedor_leasing').prop('disabled',false);
+
     });
 
     ///////////////////////////////////////////////////////////
