--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -421,7 +421,7 @@
                 $(".km-field > div > label > .icheckbox_square-grey").removeClass("checked");
                 $('#id_cero_km').prop('checked', false);
             }
-            {% if vehiculo.tipo_id == 'cedula' %}
+            {% if vehiculo.tipo_id == 'Cédula' %}
                 $('#id_tipo_id_0').iCheck('check');
             {% else %}
                 $('#id_tipo_id_1').iCheck('check');
