--- a/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
+++ b/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
@@ -487,7 +487,7 @@ jQuery(document).ready(function($) {
     $(document).on("click", "#id_tipo_pago_1", function(){
         $(".prima-ach").removeClass("hidden");
         $("#prima-mensual").empty();
-        var cuotas = 1.0;
+        var cuotas = parseFloat($("#id_cuotas").val());
         var total = parseFloat($("#prima-ach").data("total"));
         var mensualidad = total / cuotas;
         $("#prima-mensual").append("<strong>B/.  " + addThousandsSeparator(mensualidad.toFixed(2).toString()) + "</strong>");
@@ -503,7 +503,7 @@ jQuery(document).ready(function($) {
     $(document).on("click", "#id_tipo_pago_2", function(){
         $(".prima-visa").removeClass("hidden");
         $("#prima-mensual").empty();
-        var cuotas = 2.0;
+        var cuotas = parseFloat($("#id_cuotas3").val());
         var total = parseFloat($("#prima-visa").data("total"));
         var mensualidad = total / cuotas;
         $("#prima-mensual").append("<strong>B/.  " + addThousandsSeparator(mensualidad.toFixed(2).toString()) + "</strong>");
@@ -519,7 +519,7 @@ jQuery(document).ready(function($) {
     $(document).on("click", "#id_tipo_pago_3", function(){
         $(".prima-otro").removeClass("hidden");
         $("#prima-mensual").empty();
-        var cuotas = 1.0;
+        var cuotas = parseFloat($("#id_cuotas2").val());
         var total = parseFloat($("#prima-otro").data("total"));
         var mensualidad = total / cuotas;
         $("#prima-mensual").append("<strong>B/.  " + addThousandsSeparator(mensualidad.toFixed(2).toString()) + "</strong>");
